kubernetes/front-end.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pixelchat-frontend
  labels:
    app: pixelchat-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pixelchat-frontend
  template:
    metadata:
      labels:
        app: pixelchat-frontend
    spec:
      containers:
      - name: pixelchat-frontend
        image: ghcr.io/teunmos-pixelchat/frontend:develop
        imagePullPolicy: Always
        resources:
          limits:
            cpu: 100m
            memory: 256Mi
        ports:
        - containerPort: 3000
      imagePullSecrets:
      - name: dockerconfigjson-github-com
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: pixelchat-frontend
# spec:
#   type: NodePort
#   ports:
#   - port: 3000
#     targetPort: 3000
#     nodePort: 30009
#   selector:
#     app: pixelchat-frontend
---
apiVersion: v1
kind: Service
metadata:
  name: pixelchat-frontend
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 3000
    targetPort: 3000
  selector:
    app: pixelchat-frontend
