kubernetes/message-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pixelchat-message-api
  labels:
    app: pixelchat-message-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pixelchat-message-api
  template:
    metadata:
      labels:
        app: pixelchat-message-api
    spec:
      containers:
      - name: pixelchat-message-api
        image: ghcr.io/teunmos-pixelchat/message-api:develop
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
        ports:
        - containerPort: 3001
      imagePullSecrets:
      - name: dockerconfigjson-github-com
---
apiVersion: v1
kind: Service
metadata:
  name: pixelchat-message-api
spec:
  type: NodePort
  ports:
  - port: 3001
    targetPort: 3001
    nodePort: 30001
    
  selector:
    app: pixelchat-message-api
