kubernetes/user-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pixelchat-user-service
  labels:
    app: pixelchat-user-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pixelchat-user-service
  template:
    metadata:
      labels:
        app: pixelchat-user-service
    spec:
      containers:
      - name: pixelchat-user-service
        image: ghcr.io/teunmos-pixelchat/user-service:develop
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 200m
            memory: 256Mi
          limits:
            cpu: 350m
            memory: 512Mi
        ports:
        - containerPort: 3002
      imagePullSecrets:
      - name: dockerconfigjson-github-com
---
apiVersion: v1
kind: Service
metadata:
  name: pixelchat-user-service
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 3002
    targetPort: 3002
  selector:
    app: pixelchat-user-service
