kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  tls:
    - hosts:
        - ubuntu-vm-school
      secretName: vmcert
  rules:
    - host: ubuntu-vm-school
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pixelchat-gateway
                port:
                  number: 80
